# voicetranscript-service

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  dev-check.sh  docker-compose.prod.yml  docker-compose.yml  main.py  minimal-client-remote.py  minimal-client.py  pyproject.toml  requirements.txt  run.py  setup.cfg  test_rate_limit.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.prod.yml
docs/: README.md  Zoom-Info-Question.md
logs/: README.md
resources/: README.md
resources/config/: pyproject.toml
src/voicetranscript/: __init__.py  main.py
tests/: conftest.py  test_main.py
